# surajashray_AI

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  lab.py  main.py  pyproject.toml  requirements.txt  test_enpoints.py
.github/workflows/: ci_cd.yml
app/api/v1/endpoints/: lab_report.py  wellness_chat.py
app/schemas/: schema.py  user_data.py
app/scripts/: insert_docs.py
app/services/: lab_report_service.py  meal_analyzer.py  openai_service.py
app/services/lab_report/ocr/: ocr.py
app/utils/: pinecone_utils.py  shared_state.py
config/: lab_report_config.py
reverse_proxy/: nginx.conf
tests/: test_wellness_chat.py
